--- a/pages/side-panel/index.html
+++ b/pages/side-panel/index.html
@@ -5,7 +5,7 @@
     <title>Side Panel</title>
   </head>
 
-  <body>
+  <body class="bg-slate-950">
     <div id="app-container"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
