--- a/pages/popup/index.html
+++ b/pages/popup/index.html
@@ -5,7 +5,7 @@
     <title>Popup</title>
   </head>
 
-  <body>
+  <body class="bg-slate-700">
     <div id="app-container"></div>
     <script type="module" src="./src/index.tsx"></script>
   </body>
